[gd_scene load_steps=4 format=3 uid="uid://b3pil7ks0jcdu"]

[ext_resource type="Script" uid="uid://bmw1nje5imhnc" path="res://addons/scripts/lobby_example.gd" id="1_8eg6v"]

[sub_resource type="LabelSettings" id="LabelSettings_8eg6v"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_vaqyl"]
font_size = 30

[node name="lobby_example" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8eg6v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -95.0
offset_right = 94.5
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="ServerUrlLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "URL do Servidor:"
label_settings = SubResource("LabelSettings_8eg6v")

[node name="ServerUrlLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "ws://127.0.0.1:9090"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Conectar"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RoomCodeLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "CÃ³digo da Sala"

[node name="JoinRoomButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Entrar na Sala"

[node name="CreateRoomButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Criar Sala"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Desconectado"
label_settings = SubResource("LabelSettings_vaqyl")
